# automations

./: .pre-commit-config.yaml  MANUAL_CHECKLIST.md  NEXT_STEPS.md  README.md  agent_prompt_precommit_tests.md  git.py  github.py  hugo.py  pyproject.toml  python_lib.py  scaffold_hugo.py  toml_utils.py  update.py
cleanup/: remove_kernel.py
init/: generic.py  hugo.py  js.py  notebook.py  python_lib.py  python_script.py  rust.py
parts/: pyproject.toml
parts/src/automations_parts/: github.py  precommit.py  readme.py  run.py  toml_utils.py
tests/: __init__.py  conftest.py
tests/parts/: __init__.py  test_git.py  test_readme.py  test_toml_utils.py
