[project]
name = "automations"
version = "0.1.0"
description = "Personal project scaffolding toolkit"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
lint = ["ruff>=0.9.0", "mypy>=1.14.0"]
test = ["pytest>=8.0", "pytest-mock>=3.14"]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
]
# Dependencies needed for automations-parts package
parts = ["rich>=13.0", "tomli-w>=1.0"]

[tool.uv.sources]
automations-parts = { path = "parts", editable = true }

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["parts/src"]
