[project]
name = "automations-parts"
version = "0.1.0"
description = "Shared parts for rj's init scripts"
requires-python = ">=3.12"
dependencies = ["rich>=13.0", "tomli-w>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automations_parts"]
